--- a/css/style1.css
+++ b/css/style1.css
@@ -93,3 +93,16 @@ h1 {
 	color:red;
 	display:none;
 }
+.player{
+  width: 300px;
+	height:20px;
+	color:black;
+	position: relative;
+}
+.select{
+	background-color:white;
+	width: 300px;
+	color:black;
+	position: absolute;
+	border-radius: 50%;
+}
